# boost-python-examples

./: .gitignore  CMakeLists.txt  Position.h  Position_wrap.cxx  README  doit.sh  go_mod1.py  handle_pyerror.cpp  m1a  m1a.helloworld.cpp  m1b  m1b.modnameerror.cpp  m2a  m2a.helloint.cpp  m2b  m2b.udt.cpp  m2bb  m2bb.staticmethod.cpp  m2bc  m2bc.enums.cpp  m2c  m2c.udtpass.cpp  m2cb  m2cb.udt.cpp  m2d  m2d.datamember.cpp  m2da  m2da.datamember.cpp  m2db  m2db.static_datamember.cpp  m2e  m2e.readonly.cpp  m2f  m2f.constructor.cpp  m2g  m2g.constructors.cpp  m2ga  m2ga.cppthrow.cpp  m2gb  m2gb.cppthrow_custom.cpp  (+50 more)
minimal/: CMakeLists.txt  lib.cpp
